// THIS FILE IS AUTO-GENERATED BY THE CODE-GEN SCRIPT. DO NOT EDIT.
// Contains protobuf definitions Reference Data commands.

syntax = "proto3";
package ARQ.Proto.RD.Cmd;

import "refdata_entities.proto";
import "id.proto";

/*
================== Upsert/Deactivate Command Messages ==================
*/

// --- Command Messages for Currency ---

message UpsertCurrency
{
    ARQ.Proto.ID.UUID target_uuid = 1;
    ARQ.Proto.RD.Currency currency = 2;
    string updated_by = 3;
    uint32 expected_version = 4;
}

message DeactivateCurrency
{
    ARQ.Proto.ID.UUID target_uuid = 1;
    string updated_by = 2;
    uint32 expected_version = 3;
}

// --- Command Messages for User ---

message UpsertUser
{
    ARQ.Proto.ID.UUID target_uuid = 1;
    ARQ.Proto.RD.User user = 2;
    string updated_by = 3;
    uint32 expected_version = 4;
}

message DeactivateUser
{
    ARQ.Proto.ID.UUID target_uuid = 1;
    string updated_by = 2;
    uint32 expected_version = 3;
}

